- added HTTP handler for drawing download